# RuID

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSE.md  README.md  \
aggregator/: Cargo.toml
aggregator/src/: main.rs
camera_node/: Cargo.toml
camera_node/src/: main.rs
client/: Cargo.toml
client/scripts/: get_yolov11_onnx.py
client/src/: main.rs
crates/ruid-camera/: Cargo.toml
crates/ruid-camera/examples/: preview.rs
crates/ruid-camera/src/: lib.rs  stream.rs
crates/ruid-detect/: Cargo.toml
crates/ruid-detect/examples/: pipeline.rs  visualize.rs
crates/ruid-detect/src/: lib.rs
crates/ruid-detect/tests/: smoke.rs
crates/ruid-model/: Cargo.toml  README.md
crates/ruid-model/examples/: basic_usage.rs
crates/ruid-model/src/: export.rs  lib.rs  quantize.rs  resnet.rs  yolo.rs
crates/ruid-model/tests/: integration_test.rs
crates/ruid-preprocess/: Cargo.toml
crates/ruid-preprocess/src/: lib.rs
crates/ruid-preprocess/tests/: smoke.rs
examples/: Cargo.toml  dynamic_dimensions_demo.rs  full_pipeline_demo.rs
ru_common/: Cargo.toml
ru_common/src/: lib.rs
ruid-camera/: Cargo.toml
ruid-camera/examples/: preview.rs
ruid-camera/src/: lib.rs  stream.rs
scripts/: export_models.py
