[package]
name    = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
ru_common = { path = "../ru_common" }

reqwest   = { workspace = true }
tokio     = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
serde_json = "1.0"
ndarray   = { workspace = true }
linfa     = { workspace = true }
