[package]
name    = "camera_node"
version = "0.1.0"
edition = "2021"

[dependencies]
ru_common = { path = "../ru_common" }

axum      = { workspace = true }
tokio     = { workspace = true }
opencv    = { workspace = true }
hostname  = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
serde_json = "1.0"
ndarray   = { workspace = true }
thiserror = { workspace = true }
