[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.14"
env_logger = "0.11.6"
image = "0.25.5"
imageproc = "0.25.0"
libcamera = "0.3.0"
log = "0.4.22"
log4rs = "1.3.0"
num_cpus = "1.16.0"
sdl2 = "0.37.0"
thiserror = "2.0.9"
tract-onnx = "0.21.8"
