[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
env_logger = "0.11.6"
log = "0.4.22"
log4rs = "1.3.0"
num_cpus = "1.16.0"
opencv = "0.94.1"
thiserror = "2.0.9"
tract-onnx = "0.21.9"
ort = "=2.0.0-rc.9"
ndarray = "0.16.1"
