[package]
name        = "ruid-camera"
version     = "0.2.0"
edition     = "2021"
authors     = ["Ryan Rumana <ryan.rumana@gmail.com>"]
resolver    = "2"

[dependencies]
anyhow       = "1.0"
thiserror    = "1.0"
gst            = { version = "0.22", package = "gstreamer",           features = ["v1_22"] }
gst-app        = { version = "0.22", package = "gstreamer-app",       features = ["v1_22"] }
gst-video      = { version = "0.22", package = "gstreamer-video",     features = ["v1_22"] }
gst-allocators = { version = "0.22", package = "gstreamer-allocators", features = ["v1_22"] }
gst-sys        = { version = "0.22", package = "gstreamer-sys",       features = ["v1_22"] }


[dev-dependencies]
serial_test = "2"

