[package]
name        = "ruid-camera"
version     = "0.2.0"
edition     = "2021"
authors     = ["Ryan Rumana <ryan.rumana@gmail.com>"]
resolver    = "2"

[dependencies]
anyhow       = "1.0"
thiserror    = "1.0"
gst            = { version = "0.22", package = "gstreamer",           features = ["v1_22"] }
gst-app        = { version = "0.22", package = "gstreamer-app",       features = ["v1_22"] }
gst-allocators = { version = "0.22", package = "gstreamer-allocators",features = ["v1_22"] }
futures-core = "0.3"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
libc = "0.2.172"

[dev-dependencies]
serial_test = "2"

