[package]
name     = "ruid-detect"
version  = "0.1.0"
edition  = "2021"
authors  = ["Ryan Rumana <ryan.rumana@gmail.com>"]
resolver = "2"

[features]
default = []

[dependencies]
ort       = { git = "https://github.com/pykeio/ort.git", default-features = false, features = ["std", "download-binaries", "ndarray"] }
ndarray   = { version = "0.16", features = ["serde"] }   # -> ort’s ndarray API uses 0.15
thiserror = "1.0"
opencv    = { version = "0.94"}   # camera preview
anyhow    = { version = "1"}
num_cpus = "1.16.0"

# reuse your preprocess crate’s tensor type
ruid-preprocess  = { path = "../ruid-preprocess" }

